--- a/Untitled Notebook 2025-06-28 16_26_31.ipynb
+++ b/Untitled Notebook 2025-06-28 16_26_31.ipynb
@@ -74,7 +74,11 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df=[(1,\"vb\"),(2,\"pp\")]\n",
+    "schema=\"id int, name string\"\n",
+    "\""
+   ]
   }
  ],
  "metadata": {
