--- a/Untitled Notebook 2025-06-28 16_26_31.ipynb
+++ b/Untitled Notebook 2025-06-28 16_26_31.ipynb
@@ -61,6 +61,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "pyspark code"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -77,8 +84,20 @@
    "source": [
     "df=[(1,\"vb\"),(2,\"pp\")]\n",
     "schema=\"id int, name string\"\n",
-    "\""
+    "df=spark.createDataFrame(data,schema)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
